@@ -260,6 +260,9 @@ Documentation
 * SOLR-1590: Javadoc for XMLWriter#startTag
   (Chris A. Mattmann via hossman)
 
+* SOLR-1792: Documented peculiar behavior of TestHarness.LocalRequestFactory
+  (hossman)
+
 ================== Release 1.4.0 ==================
 Release Date:  See http://lucene.apache.org/solr for the official release date.
 
